--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^3.0.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
+    "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pg": "^7.11.0",
     "reflect-metadata": "^0.1.12",
